supratim531: fix(index): Added one br tag to manage uneven alignment for now

--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
       <!-- Office Locations Section -->
       <section class="offices-section">
         <h2 class="offices-heading">Our Offices</h2>
+
         <div class="offices-grid">
           <!-- Office 1: UK -->
           <div class="office-card">
@@ -323,9 +324,7 @@
               target="_blank" rel="noopener noreferrer" class="maps-button">Open in Google Maps</a>
           </div>
 
-
-
-          <!-- Office 3: Kolkata Working -->
+          <!-- Office 2: Kolkata Working -->
           <div class="office-card">
             <h3 class="office-title">Martin Burn House</h3>
             <!-- <p class="office-subtitle">WORKING OFFICE</p> -->
@@ -339,11 +338,12 @@
             <a href="https://www.google.com/maps/place/Innerwork+Legal+Services/@22.5721802,88.3490724,17z/data=!3m1!4b1!4m6!3m5!1s0x3a0277fbfce91995:0xb2fec491ace6014!8m2!3d22.5721753!4d88.3516473!16s%2Fg%2F11x84szqlw?entry=ttu&g_ep=EgoyMDI1MDgxMi4wIKXMDSoASAFQAw%3D%3D"
               target="_blank" rel="noopener noreferrer" class="maps-button">Open in Google Maps</a>
           </div>
-          <!-- Office 2: Kolkata Registered -->
+
+          <!-- Office 3: Kolkata Registered -->
           <div class="office-card">
             <h3 class="office-title">22, Sukeas Lane</h3>
-            <!-- <p class="office-subtitle">REGISTERED OFFICE</p> -->
             <p class="office-address">5th Floor, Kolkata 700001</p>
+            <p class="office-subtitle"><br /></p>
             <div class="office-map">
               <iframe
                 src="https://maps.google.com/maps?q=Innerwork+Advisors+LLP%2C+5th+Floor%2C+22%2C+Sukeas+Ln%2C+Murgighata%2C+B.B.D.+Bagh%2C+Kolkata%2C+West+Bengal+700001&output=embed"
