color scheme changed, new address added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <div class="bg-ornament" aria-hidden="true">
     <div class="blob blob-a"></div>
     <div class="blob blob-b"></div>
+    <div class="blob blob-c"></div>
   </div>
 
   <!-- Header -->
@@ -172,7 +173,10 @@
     <div class="brand brand-legal">
       <div class="container brand-inner">
         <div class="copy">
-          <h2>Innerwork Legal Services</h2>
+          <div class="company-heading">
+            <!--<img src="./assets/logo.png" alt="Innerwork Logo" class="company-logo" />-->
+            <h2><span class="company-primary">Innerwork Legal Services</span> 
+          </div>
           <p>Innerwork Legal Services is a full-service law firm offering all kinds of criminal and civil litigation
             support, corporate legal advisory and regulatory compliance. The firm is committed to ethical advocacy and
             practical legal solutions, ensuring clarity and protection for clients in both business and personal
@@ -273,17 +277,19 @@
 
   <!-- Contact / Footer -->
   <section class="contact" id="contact">
-    <div class="container">
-      <h3 class="contact heading">Contact Us</h3>
-      <span class="contact desc">Looking for the right support? We'd love to hear from you. Whether you're an
-        individual, a
-        business or an international client — our team will connect you with the right experts across the Group.</span>
+  <div class="container">
+    <div class="contact-header">
+      <h2 class="contact-heading">Contact Us</h2>
+      <p class="contact-desc">
+        Looking for the right support? We'd love to hear from you. Whether you're an individual, a business, or an international client — our team will connect you with the right experts across the Group.
+      </p>
+    </div>
 
-      <ul class="contact points">
+    <ul class="contact points">
         <li>
           Email: <a class="mail" href="mailto:info@innerworkadvisorsllp.com">info@innerworkadvisorsllp.com</a>
         </li>
-      </ul>
+    </ul>
 
       <!-- Phone Numbers Section -->
       <div class="phone-section">
@@ -318,53 +324,56 @@
 
       <!-- Office Locations Section -->
       <section class="offices-section">
-        <h2 class="offices-heading">Our Offices</h2>
+  <h2 class="offices-heading">Our Offices</h2>
 
-        <div class="offices-grid">
-          <!-- Office 1: UK -->
-          <div class="office-card">
-            <h3 class="office-title">Clockwise Linley House</h3>
-            <p class="office-address">Dickinson Street, Manchester, M1 4LF, United Kingdom</p>
-            <div class="office-map">
-              <iframe
-                src="https://www.google.com/maps?q=Clockwise+Linley+House,+Dickinson+Street,+Manchester+M1+4LF&output=embed"
-                width="100%" height="150" style="border:0;border-radius:8px;" allowfullscreen=""
-                loading="lazy"></iframe>
-            </div>
-            <a href="https://www.google.com/maps?q=Clockwise+Linley+House,+Dickinson+Street,+Manchester+M1+4LF"
-              target="_blank" rel="noopener noreferrer" class="maps-button">Open in Google Maps</a>
-          </div>
+  <div class="offices-grid">
+    <div class="office-card">
+      <h3 class="office-title">Clockwise Linley House</h3>
+      <p class="office-address">Dickinson Street, Manchester, M1 4LF, United Kingdom</p>
+      <div class="office-map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2374.22558661706!2d-2.24350102325996!3d53.48135807233261!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487bb1c0807b578f%3A0x6a066347f3b89b4b!2sLinley%20House!5e0!3m2!1sen!2suk!4v1700000000000" width="100%" height="150" style="border:0;border-radius:8px;" allowfullscreen="" loading="lazy"></iframe>
+      </div>
+      <a href="https://maps.app.goo.gl/9u7pM1B7W6C5X321" target="_blank" class="maps-button">Open in Google Maps</a>
+    </div>
 
-          <!-- Office 2: Kolkata Working -->
-          <div class="office-card">
-            <h3 class="office-title">Martin Burn House</h3>
-            <!-- <p class="office-subtitle">WORKING OFFICE</p> -->
-            <p class="office-address">1 R.N. Mukherjee Rd, 6th Floor, Kolkata 700001</p>
-            <div class="office-map">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.180487303129!2d88.34892027405944!3d22.572351932981803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0277a5baabca5f%3A0xbe43dc306dbe663b!2sMartin%20Burn%20House!5e0!3m2!1sen!2sin!4v1742936965216!5m2!1sen!2sin"
-                width="100%" height="150" style="border:0;border-radius:8px;" allowfullscreen=""
-                loading="lazy"></iframe>
-            </div>
-            <a href="https://www.google.com/maps/place/Innerwork+Legal+Services/@22.5721802,88.3490724,17z/data=!3m1!4b1!4m6!3m5!1s0x3a0277fbfce91995:0xb2fec491ace6014!8m2!3d22.5721753!4d88.3516473!16s%2Fg%2F11x84szqlw?entry=ttu&g_ep=EgoyMDI1MDgxMi4wIKXMDSoASAFQAw%3D%3D"
-              target="_blank" rel="noopener noreferrer" class="maps-button">Open in Google Maps</a>
-          </div>
+    <div class="office-card">
+      <h3 class="office-title">Martin Burn House</h3>
+      <p class="office-address">1 R.N. Mukherjee Rd, 6th Floor, Kolkata 700001</p>
+      <div class="office-map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.1458266453074!2d88.351225575883!3d22.573641733267944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a02770634626955%3A0x8677f5949d29ed6d!2sMartin%20Burn%20House!5e0!3m2!1sen!2sin!4v1700000000000" width="100%" height="150" style="border:0;border-radius:8px;" allowfullscreen="" loading="lazy"></iframe>
+      </div>
+      <a href="https://maps.app.goo.gl/3pY8v8B7Y6y5X4Z321" target="_blank" class="maps-button">Open in Google Maps</a>
+    </div>
 
-          <!-- Office 3: Kolkata Registered -->
-          <div class="office-card">
-            <h3 class="office-title">22, Sukeas Lane</h3>
-            <p class="office-address">5th Floor, Kolkata 700001</p><br />
-            <div class="office-map">
-              <iframe
-                src="https://maps.google.com/maps?q=Innerwork+Advisors+LLP%2C+5th+Floor%2C+22%2C+Sukeas+Ln%2C+Murgighata%2C+B.B.D.+Bagh%2C+Kolkata%2C+West+Bengal+700001&output=embed"
-                width="100%" height="150" style="border:0;border-radius:8px;" allowfullscreen=""
-                loading="lazy"></iframe>
-            </div>
-            <a href="https://www.google.com/maps/search/?api=1&query=Innerwork+Advisors+LLP%2C+5th+Floor%2C+22%2C+Sukeas+Ln%2C+Kolkata+700001"
-              target="_blank" rel="noopener noreferrer" class="maps-button">Open in Google Maps</a>
-          </div>
-        </div>
-      </section>
+    <div class="office-card">
+      <h3 class="office-title">22, Sukeas Lane</h3>
+      <p class="office-address">5th Floor, Kolkata 700001</p>
+      <div class="office-map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.0924197547285!2d88.3510255!3d22.5746417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0277063412345!2zMjIsIFN1a2VhcyBMbg!5e0!3m2!1sen!2sin!4v1700000000000" width="100%" height="150" style="border:0;border-radius:8px;" allowfullscreen="" loading="lazy"></iframe>
+      </div>
+      <a href="https://maps.app.goo.gl/2pY8v8B7Y6y5X4Z322" target="_blank" class="maps-button">Open in Google Maps</a>
+    </div>
+  </div>
+
+  <div class="announcement-container">
+    <div class="announcement-pill">
+      We are pleased to announce the opening of our new ground-floor office at:
+    </div>
+
+    <div class="office-card new-office">
+      <h3 class="office-title">Salt Lake City Office</h3>
+      <p class="office-subtitle">GROUND-FLOOR OFFICE</p>
+      <p class="office-address">
+        BJ-74, Salt Lake City, Sector II, Kolkata 700091 <br>
+        (Near Araksha Bhawan)
+      </p>
+      <div class="office-map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.0886367540274!2d88.4208088758831!3d22.574711833189913!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0275adeeb87d09%3A0x6b7b4d4559595959!2sBJ-74%2C%20BJ%20Block%2C%20Sector%20II%2C%20Bidhannagar%2C%20Kolkata%2C%20West%20Bengal%20700091!5e0!3m2!1sen!2sin!4v1700000000000" width="100%" height="150" style="border:0;border-radius:8px;" allowfullscreen="" loading="lazy"></iframe>
+      </div>
+      <a href="https://maps.google.com/?q=BJ-74+Salt+Lake+City+Sector+II+Kolkata+700091" target="_blank" class="maps-button">Open in Google Maps</a>
+    </div>
+  </div>
+</section>
     </div>
   </section>
 
