logos added beside respective companies

--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
       <div class="container brand-inner">
         <div class="copy">
           <div class="company-heading">
-            <!--<img src="./assets/logo.png" alt="Innerwork Logo" class="company-logo" />-->
-            <h2><span class="company-primary">Innerwork Legal Services</span> 
+            <img src="./assets/legalservices.png" alt="Innerwork Legal Services Logo" class="company-logo" />
+            <h2><span class="company-primary">Innerwork Legal Services</span></h2>
           </div>
           <p>Innerwork Legal Services is a full-service law firm offering all kinds of criminal and civil litigation
             support, corporate legal advisory and regulatory compliance. The firm is committed to ethical advocacy and
@@ -203,7 +203,10 @@
     <div class="brand brand-advisors">
       <div class="container brand-inner">
         <div class="copy">
-          <h2>Innerwork Advisors LLP</h2>
+          <div class="company-heading">
+            <img src="./assets/advisorsllp.png" alt="Innerwork Advisors LLP Logo" class="company-logo" />
+            <h2>Innerwork Advisors LLP</h2>
+          </div>
           <p>Innerwork Advisors LLP is a security, investigation and corporate intelligence firm providing discreet,
             data-driven and legally compliant services. From due diligence and background verification to fraud
             detection and corporate risk assessment, the firm supports businesses, individuals and government bodies
@@ -228,7 +231,10 @@
     <div class="brand brand-uk">
       <div class="container brand-inner">
         <div class="copy">
-          <h2>Innerwork Advisors Limited - UK</h2>
+          <div class="company-heading">
+            <img src="./assets/advisorsuk.png" alt="Innerwork Advisors UK Logo" class="company-logo" />
+            <h2>Innerwork Advisors Limited - UK</h2>
+          </div>
           <p>Based in Manchester, Innerwork Advisors Ltd extends cross-border consulting and NRI liaison services for
             Indian-origin individuals and businesses in the UK. The firm bridges compliance and operational needs with
             international insight. It extends crossborder legal, financial and property matter solutions to Indian and
@@ -251,7 +257,10 @@
     <div class="brand brand-financials">
       <div class="container brand-inner">
         <div class="copy">
-          <h2>Innerwork Financial & Accounting Advisors Pvt. Ltd.</h2>
+          <div class="company-heading">
+            <img src="./assets/finance.png" alt="Innerwork Financials Logo" class="company-logo" />
+            <h2>Innerwork Financial & Accounting Advisors Pvt. Ltd.</h2>
+          </div>
           <p>Innerwork Financial & Accounting Advisors Pvt. Ltd. is a women-led, tech-driven financial consultancy firm
             delivering accounting, tax compliance and CFO advisory services for startups, SMEs and professionals. With
             clarity and trust at its core, the firm offers transparent financial management and advisory support for
@@ -362,7 +371,7 @@
 
     <div class="office-card new-office">
       <h3 class="office-title">Salt Lake City Office</h3>
-      <p class="office-subtitle">GROUND-FLOOR OFFICE</p>
+
       <p class="office-address">
         BJ-74, Salt Lake City, Sector II, Kolkata 700091 <br>
         (Near Araksha Bhawan)
