--- a/index.html
+++ b/index.html
@@ -114,21 +114,21 @@
         </ul>
       </div>
 
-      <div class="about-visual" aria-hidden="true">
+      <!-- <div class="about-visual" aria-hidden="true">
         <div class="pulse"></div>
         <svg class="orbit-system" viewBox="-24 -24 448 448" xmlns="http://www.w3.org/2000/svg">
-          <defs>
+          <defs> -->
             <!-- Four concentric paths (smallest to largest) -->
             <!-- 20px gaps: 115 / 135 / 155 / 175 -->
-            <path id="orbitPath1" d="M200,200 m-115,0 a115,115 0 1,1 230,0 a115,115 0 1,1 -230,0" />
+            <!-- <path id="orbitPath1" d="M200,200 m-115,0 a115,115 0 1,1 230,0 a115,115 0 1,1 -230,0" />
             <path id="orbitPath2" d="M200,200 m-135,0 a135,135 0 1,1 270,0 a135,135 0 1,1 -270,0" />
             <path id="orbitPath3" d="M200,200 m-155,0 a155,155 0 1,1 310,0 a155,155 0 1,1 -310,0" />
             <path id="orbitPath4" d="M200,200 m-175,0 a175,175 0 1,1 350,0 a175,175 0 1,1 -350,0" />
 
-          </defs>
+          </defs> -->
 
           <!-- Each orbit rotates independently -->
-          <g class="orbit orbit-1">
+          <!-- <g class="orbit orbit-1">
             <text class="orbit-label">
               <textPath href="#orbitPath1">
                 • INNERWORK LEGAL SERVICES • INNERWORK LEGAL SERVICES •
@@ -160,7 +160,16 @@
             </text>
           </g>
         </svg>
+      </div> -->
+
+      <div class="about-visual">
+        <img 
+          src="./assets/team.jpg" 
+          alt="Innerwork Group Team" 
+          class="about-image"
+        />
       </div>
+
     </div>
   </section>
 
@@ -331,8 +340,8 @@
         </div>
       </div>
 
-      <!-- Office Locations Section -->
-      <section class="offices-section">
+<!-- Office Locations Section -->
+<section class="offices-section">
   <h2 class="offices-heading">Our Offices</h2>
 
   <div class="offices-grid">
@@ -365,9 +374,6 @@
   </div>
 
   <div class="announcement-container">
-    <div class="announcement-pill">
-      We are pleased to announce the opening of our new ground-floor office at:
-    </div>
 
     <div class="office-card new-office">
       <h3 class="office-title">Salt Lake City Office</h3>
