--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       </div> -->
 
       <div class="about-visual">
-        <img src="./assets/about.jpg" alt="Innerwork Group Office" class="about-image" />
+        <img src="https://innerworkgroups.com/assets/about.webp" alt="Innerwork Group Office" class="about-image" />
       </div>
 
     </div>
@@ -252,7 +252,8 @@
       <div class="container brand-inner">
         <div class="copy">
           <div class="company-heading">
-            <img src="./assets/legalservices.png" alt="Innerwork Legal Services Logo" class="company-logo" />
+            <img src="https://innerworkgroups.com/assets/legalservices.webp" alt="Innerwork Legal Services Logo"
+              class="company-logo" />
             <h2><span class="company-primary">Innerwork Legal Services</span></h2>
           </div>
           <p>Innerwork Legal Services is a full-service law firm offering all kinds of criminal and civil litigation
@@ -276,7 +277,8 @@
               class="brand-link cta">← Visit</button></a>
         </div>
         <div class="brand-image-wrapper">
-          <img src="./assets/legal.jpg" class="company-feature-img" alt="Innerwork Legal Services Office" />
+          <img src="https://innerworkgroups.com/assets/legal.webp" class="company-feature-img"
+            alt="Innerwork Legal Services Office" />
         </div>
       </div>
     </div>
@@ -285,7 +287,8 @@
       <div class="container brand-inner">
         <div class="copy">
           <div class="company-heading">
-            <img src="./assets/advisorsllp.png" alt="Innerwork Advisors LLP Logo" class="company-logo" />
+            <img src="https://innerworkgroups.com/assets/advisorsllp.webp" alt="Innerwork Advisors LLP Logo"
+              class="company-logo" />
             <h2>Innerwork Advisors LLP</h2>
           </div>
           <p>Innerwork Advisors LLP is a security, investigation and corporate intelligence firm providing discreet,
@@ -307,7 +310,8 @@
               class="brand-link cta">Visit →</button></a>
         </div>
         <div class="brand-image-wrapper">
-          <img src="./assets/advisors.avif" class="company-feature-img" alt="Innerwork Advisors LLP" />
+          <img src="https://innerworkgroups.com/assets/advisors.webp" class="company-feature-img"
+            alt="Innerwork Advisors LLP" />
         </div>
       </div>
     </div>
@@ -316,7 +320,8 @@
       <div class="container brand-inner">
         <div class="copy">
           <div class="company-heading">
-            <img src="./assets/advisorsuk.png" alt="Innerwork Advisors UK Logo" class="company-logo" />
+            <img src="https://innerworkgroups.com/assets/advisorsuk.webp" alt="Innerwork Advisors UK Logo"
+              class="company-logo" />
             <h2>Innerwork Advisors Limited - UK</h2>
           </div>
           <p>Based in Manchester, Innerwork Advisors Ltd extends cross-border consulting and NRI liaison services for
@@ -336,7 +341,8 @@
               class="brand-link cta">← Visit</button></a>
         </div>
         <div class="brand-image-wrapper">
-          <img src="./assets/uk.jpg" class="company-feature-img" alt="Innerwork Advisors UK" />
+          <img src="https://innerworkgroups.com/assets/uk.webp" class="company-feature-img"
+            alt="Innerwork Advisors UK" />
         </div>
       </div>
     </div>
@@ -345,7 +351,8 @@
       <div class="container brand-inner">
         <div class="copy">
           <div class="company-heading">
-            <img src="./assets/finance.png" alt="Innerwork Financials Logo" class="company-logo" />
+            <img src="https://innerworkfinancials.com/Image/logo-web.png" alt="Innerwork Financials Logo"
+              class="company-logo" />
             <h2>Innerwork Financial & Accounting Advisors Pvt. Ltd.</h2>
           </div>
           <p>Innerwork Financial & Accounting Advisors Pvt. Ltd. is a women-led, tech-driven financial consultancy firm
@@ -367,7 +374,8 @@
               class="brand-link cta">Visit →</button></a>
         </div>
         <div class="brand-image-wrapper">
-          <img src="./assets/finacial.avif" class="company-feature-img" alt="Innerwork Financials" />
+          <img src="https://innerworkfinancials.com/Image/abt_img.jpg" class="company-feature-img"
+            alt="Innerwork Financials" />
         </div>
       </div>
     </div>
@@ -458,10 +466,12 @@
           <p class="office-address">Dickinson Street, Manchester, M1 4LF, United Kingdom</p>
           <div class="office-map">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2374.22558661706!2d-2.24350102325996!3d53.48135807233261!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487bb1c0807b578f%3A0x6a066347f3b89b4b!2sLinley%20House!5e0!3m2!1sen!2suk!4v1700000000000"
-              width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2374.565829666164!2d-2.2406360999999992!3d53.47621909999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487bb1ea8b51f75f%3A0x7e9dbb74a038a3f!2sClockwise%20Linley%20House%2C%20Manchester%20-%20Coworking%20%26%20Office%20Space!5e0!3m2!1sen!2sin!4v1767694298069!5m2!1sen!2sin"
+              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
-          <a href="https://maps.app.goo.gl/9u7pM1B7W6C5X321" target="_blank" class="maps-button">Open in Google
+          <a href="https://www.google.com/maps/place/Clockwise+Linley+House,+Manchester+-+Coworking+%26+Office+Space/@53.4762191,-2.2406361,17z/data=!3m1!4b1!4m6!3m5!1s0x487bb1ea8b51f75f:0x7e9dbb74a038a3f!8m2!3d53.4762191!4d-2.2406361!16s%2Fg%2F11c51w3zlk?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
+            target="_blank" class="maps-button">Open in Google
             Maps</a>
         </div>
       </div>
@@ -471,13 +481,15 @@
         <div class="office-card">
 
           <h3 class="office-title">Martin Burn House</h3>
-          <p class="office-address">1 R.N. Mukherjee Rd, 6th Floor, Kolkata 700001</p>
+          <p class="office-address">1 R.N. Mukherjee Rd, 6th Floor, Kolkata 700001 (Working Office)</p>
           <div class="office-map">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.1458266453074!2d88.351225575883!3d22.573641733267944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a02770634626955%3A0x8677f5949d29ed6d!2sMartin%20Burn%20House!5e0!3m2!1sen!2sin!4v1700000000000"
-              width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.185336026444!2d88.34914327475713!3d22.57217053298718!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0277920ecf8b47%3A0x52a0b302cf5e06d3!2sInnerwork%20Advisors%20LLP%20%7C%20Private%20Investigator%20%26%20Detective%20Agency%20in%20Kolkata!5e0!3m2!1sen!2sin!4v1767694350628!5m2!1sen!2sin"
+              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
-          <a href="https://maps.app.goo.gl/3pY8v8B7Y6y5X4Z321" target="_blank" class="maps-button">Open in Google
+          <a href="https://www.google.com/maps/place/Innerwork+Advisors+LLP+%7C+Private+Investigator+%26+Detective+Agency+in+Kolkata/@22.5721705,88.3491433,17z/data=!3m1!4b1!4m6!3m5!1s0x3a0277920ecf8b47:0x52a0b302cf5e06d3!8m2!3d22.5721656!4d88.3517182!16s%2Fg%2F11w81r7t3l?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
+            target="_blank" class="maps-button">Open in Google
             Maps</a>
         </div>
 
@@ -485,28 +497,31 @@
 
           <h3 class="office-title">Salt Lake City Office</h3>
           <p class="office-address">
-            BJ-74, Salt Lake City, Sector II, Kolkata 700091 <br>
+            BJ-74,Sector II, Kolkata 700091 <br>
             (Near Araksha Bhawan)
           </p>
           <div class="office-map">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.0886367540274!2d88.4208088758831!3d22.574711833189913!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0275adeeb87d09%3A0x6b7b4d4559595959!2sBJ-74%2C%20BJ%20Block%2C%20Sector%20II%2C%20Bidhannagar%2C%20Kolkata%2C%20West%20Bengal%20700091!5e0!3m2!1sen!2sin!4v1700000000000"
-              width="100%" height="150" style="border:0;border-radius:8px;" allowfullscreen="" loading="lazy"></iframe>
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3683.653706146685!2d88.42456779999999!3d22.5920516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a02756337d170af%3A0xc673d796705545b!2sInnerwork%20Advisors%20LLP!5e0!3m2!1sen!2sin!4v1767694245222!5m2!1sen!2sin"
+              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
-          <a href="https://maps.google.com/?q=BJ-74+Salt+Lake+City+Sector+II+Kolkata+700091" target="_blank"
-            class="maps-button">Open in Google Maps</a>
+          <a href="https://www.google.com/maps/place/Innerwork+Advisors+LLP/@22.5920516,88.4245678,17z/data=!3m1!4b1!4m6!3m5!1s0x3a02756337d170af:0xc673d796705545b!8m2!3d22.5920516!4d88.4245678!16s%2Fg%2F11yv0w0tbx?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
+            target="_blank" class="maps-button">Open in Google Maps</a>
         </div>
 
         <div class="office-card">
 
-          <h3 class="office-title">5th Floor, Kolkata</h3>
-          <p class="office-address">Kolkata 700001</p>
+          <h3 class="office-title">22, Sukeas Lane</h3>
+          <p class="office-address"> 5th Floor,Kolkata 700001 (Registered Office) </p>
           <div class="office-map">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.0924197547285!2d88.3510255!3d22.5746417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0277063412345!2zMjIsIFN1a2VhcyBMbg!5e0!3m2!1sen!2sin!4v1700000000000"
-              width="100%" height="150" style="border:0;border-radius:8px;" allowfullscreen="" loading="lazy"></iframe>
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.055455540898!2d88.34905377475728!3d22.57702913280898!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0277bac19f3641%3A0x165b6efe9eaeba59!2sInnerwork%20Advisors%20LLP%20%7C%20Security%20Guard%20Company%20%7C%20Best%20Security%20Agency%20in%20Kolkata!5e0!3m2!1sen!2sin!4v1767694402453!5m2!1sen!2sin"
+              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
-          <a href="https://maps.app.goo.gl/2pY8v8B7Y6y5X4Z322" target="_blank" class="maps-button">Open in Google
+          <a href="https://www.google.com/maps/place/Innerwork+Advisors+LLP+%7C+Security+Guard+Company+%7C+Best+Security+Agency+in+Kolkata/@22.5770291,88.3490538,17z/data=!3m1!4b1!4m6!3m5!1s0x3a0277bac19f3641:0x165b6efe9eaeba59!8m2!3d22.5770242!4d88.3516287!16s%2Fg%2F11rglqpyvz?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
+            target="_blank" class="maps-button">Open in Google
             Maps</a>
         </div>
       </div>
@@ -532,15 +547,15 @@
         <p class="modal-subtitle">Sector II, Kolkata</p>
       </div>
       <div class="modal-body">
-        <p>We are pleased to announce the opening of our new ground-floor office at:</p>
+        <p>We are pleased to announce the opening of our new branch office at:</p>
         <address>
           BJ-74, Salt Lake City<br>
-          Sector II, Kolkata – 700091<br>
+          Sector II, Kolkata - 700091<br>
           <span class="landmark">Near Araksha Bhawan</span>
         </address>
       </div>
-      <a href="https://maps.google.com/?q=BJ-74+Salt+Lake+City+Sector+II+Kolkata+700091" target="_blank"
-        class="cta modal-cta">View on Google Maps</a>
+      <a href="https://www.google.com/maps/place/Innerwork+Advisors+LLP/@22.5920516,88.4245678,17z/data=!3m1!4b1!4m6!3m5!1s0x3a02756337d170af:0xc673d796705545b!8m2!3d22.5920516!4d88.4245678!16s%2Fg%2F11yv0w0tbx?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
+        target="_blank" class="cta modal-cta">View on Google Maps</a>
     </div>
   </div>
 
