Update headline text for clarity

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <!-- Hero -->
   <section class="hero">
     <div class="container">
-      <h1 class="headline">One Group, Diverse Expertise, Trusted Results.</h1>
+      <h1 class="headline">One Group. Diverse Expertise. Trusted Results.</h1>
       <span class="subhead">Innerwork Group unites specialized firms across <strong>legal, financial, security and
           investigative
           services</strong>, empowering individuals and businesses in India and abroad with clarity, compliance and
